--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,4 @@
 
-@import "~bootstrap/scss/bootstrap";
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -9,3 +8,6 @@ body {
     background-size: cover;
     font-family: "Roboto", sans-serif;
 }
+
+@import './partials/general';
+@import './partials/header';
