feat: create comics page and print card with foreach loop

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,3 +12,5 @@ body {
 @import './partials/general';
 @import './partials/header';
 @import './partials/footer';
+@import './partials/comics';
+@import './partials/card';
