feat: create page under construction and route of different pages

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -14,3 +14,4 @@ body {
 @import './partials/footer';
 @import './partials/comics';
 @import './partials/card';
+@import './partials/construction_page'
